--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,14 @@ body {
 }
 
 main {
+
     padding: 30px;
+}
+main img {
+    display: inline-flex;
+    height: 350px;
+    object-fit: contain;
+    padding: 20px;
 }
 
 header {
